[tool.poetry]
name = "simple-blackjack-python"
version = "0.1.0"
description = ""
authors = ["szabidev <szabi.vojtek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
unicards = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
